add hotkeys and new chants

--- a/chant.html
+++ b/chant.html
@@ -84,7 +84,7 @@
                                     <input type="radio" name="mode" id="mode-scroll" value="scroll"> Scroll
                                 </label>
                             </div>
-                            <div class="kbd-tip"></div>
+                            <div class="kbd-tip"><kbd>Alt</kbd>+<kbd>1</kbd></div>
                         </div>
                     </div>
 
@@ -92,7 +92,7 @@
                         <h2>Scroll</h2>
                         <div class="row row-scroll">
                             <button id="toggle-scroll" class="button">Start Scroll</button>
-                            <div class="kbd-tip"><kbd>Space</kbd></div>
+                            <div class="kbd-tip"><kbd>S</kbd></div>
                         </div>
                         <div class="row row-scroll">
                             <div>
@@ -111,7 +111,7 @@
                                     <input type="checkbox" id="follow-active"> Follow active line
                                 </label>
                             </div>
-                            <div class="kbd-tip small">gently snaps into view</div>
+                            <div class="kbd-tip"><kbd>L</kbd></div>
                         </div>
                         <div class="row" style="margin-top:0.5rem">
                             <div>
@@ -119,7 +119,6 @@
                                     <input type="checkbox" id="show-markers" checked> Show markers
                                 </label>
                             </div>
-                            <div class="kbd-tip small">toggle gutter ticks</div>
                         </div>
                         <div class="row" style="margin-top:0.5rem">
                             <div>
