add load marker button

--- a/chant.html
+++ b/chant.html
@@ -154,8 +154,9 @@
                         </div>
                         <div class="row" style="margin-top:0.5rem">
                             <div>
-                                <button id="export-markers" class="button">Export markers</button>
+                                <button id="load-markers" class="button">Load markers</button>
                                 <button id="import-markers" class="button" style="margin-left:0.5rem">Import markers</button>
+                                <button id="export-markers" class="button" style="margin-left:0.5rem">Export markers</button>
                                 <input id="import-file" type="file" accept="application/json,.json" style="display:none" />
                             </div>
                             <div class="kbd-tip small">JSON</div>
