switch to base 1 marker indexes

--- a/chant.html
+++ b/chant.html
@@ -177,7 +177,9 @@
                                     <input type="checkbox" id="visual-highlight" checked> Apply highlight colors
                                 </label>
                             </div>
+                            <div class="kbd-tip"><kbd>H</kbd></div>
                         </div>
+
                         <div class="row" style="margin-top:0.5rem">
                             <div>
                                 <label>
