fix morning chant codes

--- a/chant.html
+++ b/chant.html
@@ -74,7 +74,9 @@
                     </div>
 
                     <div class="row">
-                        <button id="toggle-scroll" class="button">Start</button>
+                        <div><button id="toggle-scroll" class="button">Start</button>
+                            <small id="audio-time" style="margin-left:0.5rem">0</small><small>s</small>
+                        </div>
                         <div class="kbd-tip"><kbd>Space</kbd></div>
                     </div>
 
