--- a/chant.html
+++ b/chant.html
@@ -189,6 +189,13 @@
                                 </label>
                             </div>
                         </div>
+                        <div class="row" style="margin-top:0.5rem">
+                            <div>
+                                <label>
+                                    <input type="checkbox" id="highlight-active-area"> Highlight active area
+                                </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
