--- a/chant.html
+++ b/chant.html
@@ -140,10 +140,15 @@
                         <div class="row" style="margin-top:0.5rem">
                             <div>
                                 <button id="mark-line" class="button">Mark current line</button>
+                                <button id="undo-marker" class="button">Undo last</button>
                                 <button id="clear-markers" class="button" style="margin-left:0.5rem">Clear markers</button>
                                 <span id="markers-count" class="small" style="margin-left:0.5rem"></span>
                             </div>
-                            <div class="kbd-tip"><kbd>M</kbd> <kbd>X</kbd></div>
+                            <div class="kbd-tip">
+                                <kbd>M</kbd>
+                                <kbd>Z</kbd>
+                                <kbd>X</kbd>
+                            </div>
                         </div>
                         <div class="row" style="margin-top:0.5rem">
                             <div>
@@ -154,12 +159,7 @@
                             </div>
                             <div class="kbd-tip"><kbd>J</kbd> <kbd>K</kbd></div>
                         </div>
-                        <div class="row" style="margin-top:0.5rem">
-                            <div>
-                                <button id="undo-marker" class="button">Undo last</button>
-                            </div>
-                            <div class="kbd-tip"><kbd>Z</kbd></div>
-                        </div>
+
                         <div class="row" style="margin-top:0.5rem">
                             <div>
                                 <button id="load-markers" class="button">Load markers</button>
